--- a/public/tpl/VideoView.html
+++ b/public/tpl/VideoView.html
@@ -11,7 +11,7 @@
                 <div class="span8">
 
                     <div class="control-group">
-                        <label for="videoId" class="control-label">Id:</label>
+                        <label for="videoId" class="control-label">Id</label>
 
                         <div class="controls">
                             <input id="videoId" name="id" type="text" value="<%= _id === null ? '' : _id %>"
@@ -20,7 +20,7 @@
                     </div>
 
                     <div class="control-group">
-                        <label for="name" class="control-label">Name:</label>
+                        <label for="name" class="control-label">Name</label>
 
                         <div class="controls">
                             <input type="text" id="name" name="name" value="<%= name %>"/>
@@ -29,54 +29,17 @@
                     </div>
 
                     <div class="control-group">
-                        <label for="grapes" class="control-label">Grapes:</label>
+                        <label for="grapes" class="control-label">Camera</label>
 
                         <div class="controls">
-                            <input type="text" id="grapes" name="grapes" value="<%= grapes %>"/>
+                            <input type="text" id="camera" name="camera" value="<%= camera %>"/>
                             <span class="help-inline"></span>
                         </div>
                     </div>
+                    
 
                     <div class="control-group">
-                        <label for="country" class="control-label">Country:</label>
-
-                        <div class="controls">
-                            <input type="text" id="country" name="country" value="<%= country %>"/>
-                            <span class="help-inline"></span>
-                        </div>
-                    </div>
-
-                    <div class="control-group">
-                        <label for="region" class="control-label">Region:</label>
-
-                        <div class="controls">
-                            <input type="text" id="region" name="region" value="<%= region %>"/>
-                        </div>
-                    </div>
-
-                    <div class="control-group">
-                        <label for="year" class="control-label">Year:</label>
-
-                        <div class="controls">
-                            <select class="input-small" id="year" name="year" value="<%= year %>">
-                                <option
-                                <%= year == 2012?'selected':'' %>>2012</option>
-                                <option
-                                <%= year == 2011?'selected':'' %>>2011</option>
-                                <option
-                                <%= year == 2010?'selected':'' %>>2010</option>
-                                <option
-                                <%= year == 2009?'selected':'' %>>2009</option>
-                                <option
-                                <%= year == 2008?'selected':'' %>>2008</option>
-                                <option
-                                <%= year == 2007?'selected':'' %>>2007</option>
-                            </select>
-                        </div>
-                    </div>
-
-                    <div class="control-group">
-                        <label for="description" class="control-label">Notes:</label>
+                        <label for="description" class="control-label">Description</label>
 
                         <div class="controls">
                             <textarea id="description" name="description" style="width: 90%;" rows="6"><%= description
@@ -86,12 +49,12 @@
 
                 </div>
 
-                <div class="span4">
+   <!--              <div class="span4">
                     <div class="well" style="width: 180px;text-align: center;width:50%;margin: 0px auto;">
                         <p><img id="picture" width="180" src="<%= picture === null ? 'pics/generic.jpg' : 'pics/' + picture %>"/></p>
                         <p style="color:#999;">To change the picture, drag a new picture from your file system onto the box above.</p>
                     </div>
-                </div>
+                </div> -->
 
             </div>
 
