--- a/public/tpl/HeaderView.html
+++ b/public/tpl/HeaderView.html
@@ -11,8 +11,8 @@
             <div class="nav-collapse collapse">
 
                 <ul class="nav">
-                    <li class="add-menu"><a href="#videos">Record Videos</a></li>
-                    <li class="add-menu"><a href="#videos/add"><i class="icon-edit icon-white"></i> Add Video</a></li>
+                    <li class="add-menu"><a href="#videos">Videos</a></li>
+                    <li class="add-menu"><a href="#videos/add"><i class="icon-edit icon-white"></i>+ Add Video</a></li>
                 </ul>
                 
             </div>
