--- a/public/tpl/VideoView.html
+++ b/public/tpl/VideoView.html
@@ -29,7 +29,7 @@
                     </div>
 
                     <div class="control-group">
-                        <label for="grapes" class="control-label">Camera</label>
+                        <label for="grapes" class="control-label">Camera URL</label>
 
                         <div class="controls">
                             <input type="text" id="camera" name="camera" value="<%= camera %>"/>
