starts to add some styling

--- a/public/tpl/HeaderView.html
+++ b/public/tpl/HeaderView.html
@@ -12,7 +12,7 @@
 
                 <ul class="nav">
                     <li class="add-menu"><a href="#videos">Videos</a></li>
-                    <li class="add-menu"><a href="#videos/add"><i class="icon-edit icon-white"></i>+ Add Video</a></li>
+                    <li class="add-menu"><a href="#videos/add"><i class="icon-plus icon-white"></i> Add Video</a></li>
                 </ul>
                 
             </div>
