starts to work on forms and javascript

--- a/public/tpl/HomeView.html
+++ b/public/tpl/HomeView.html
@@ -1,9 +1,7 @@
 <div class="home-hero">
-            <h1>GoDog</h1>
-
     <br/>
-    <div style="opacity: .9;">
-        <a class="btn btn-large" href="#videos">Start Recording</a>        
+    <div style="opacity: 1;">
+        <a class="btn btn-success btn-large" href="#videos"><i class="icon-white icon-circle-arrow-right"></i> Start Recording</a>        
     </div>
 
 
