--- a/public/tpl/VideoListItemView.html
+++ b/public/tpl/VideoListItemView.html
@@ -2,7 +2,5 @@
     <img src="<%= picture === null ? 'pics/generic.jpg' : 'pics/' + picture %>" height="150" width="125" alt="">
     <h5><%= name %></h5>
 </a>
-<div class="buttons">
-	<button class="btn btn-success btn-medium"><i class="icon-white icon-thumbs-up"></i> Record</button>
-	<button class="btn btn-danger btn-medium"><i class="icon-white icon-thumbs-down"></i> Stop</button>
-</div>
+<button class="btn btn-success btn-medium record_buttons"><i class="icon-white icon-thumbs-up"></i> Record</button>
+	<!-- <button class="btn btn-danger btn-medium"><i class="icon-white icon-thumbs-down"></i> Stop</button> -->
