--- a/public/tpl/VideoListItemView.html
+++ b/public/tpl/VideoListItemView.html
@@ -2,5 +2,12 @@
     <img src="<%= picture === null ? 'pics/generic.jpg' : 'pics/' + picture %>" height="150" width="125" alt="">
     <h5><%= name %></h5>
 </a>
-<button class="btn btn-success btn-medium record_buttons"><i class="icon-white icon-thumbs-up"></i> Record</button>
-	<!-- <button class="btn btn-danger btn-medium"><i class="icon-white icon-thumbs-down"></i> Stop</button> -->
+<% if (isRecording === 'false' || !isRecording) { %>
+<!-- # <button class="btn btn-medium record_buttons <%= isRecording === 'false' || !isRecording ? 'btn-success' : 'btn-danger' %>"><i class="icon-white icon-thumbs-down"></i> Record</button> -->
+	<button class="btn btn-inverse btn-medium record_buttons"></i>Start Recording</button>
+ <% } else { %>
+	<button class="btn btn-danger btn-medium record_buttons"><i class="icon-white icon-thumbs-up"></i> Recording...</button>
+<% } %>
+
+
+
