--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     </style>
     <link href="css/bootstrap-responsive.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
+    <link href="video-js.css" rel="stylesheet" type="text/css">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -57,6 +58,7 @@
 <script src="lib/underscore-min.js"></script>
 <script src="lib/backbone-min.js"></script>
 <script src="lib/bootstrap.min.js"></script>
+<script src="lib/video.js"></script>
 
 <script src="js/utils.js"></script>
 <script src="js/models/models.js"></script>
