--- a/public/tpl/VideoListItemView.html
+++ b/public/tpl/VideoListItemView.html
@@ -3,12 +3,24 @@
  <% } else { %>
 	<button class="btn btn-mini btn-success" id="power"></i>On</button>
 <% } %>
+<a href="#videos/<%= _id %>">word</a>
+<br/>
 
-<a href="#videos/<%= _id %>" class="thumbnail plain" style="text-align: center;">
+<!-- <a href="#videos/<%= _id %>" class="thumbnail plain" style="text-align: center;">
     <img src="<%= picture === null ? 'pics/generic.jpg' : 'pics/' + picture %>" height="150" width="125" alt="">
     <h5><%= name %></h5>
     <h6><%= alphabetLetter %></h6>
-</a>
+</a> -->
+
+<!-- <video src="http://10.5.5.9:8080/live/amba.m3u8"></video> -->
+<video id="example_video_1" class="video-js vjs-default-skin" controls preload="none" width="100%" height="100%"
+      poster="pics/generic.jpg"
+      data-setup="{"controls": true, "autoplay": false, "preload": "auto"}">
+<!--     <source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4' />
+    <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm' /> -->
+    <source src="http://10.5.5.9:8080/live/amba.m3u8" type='application/vnd.apple.mpegurl'/>
+</video>
+
 <% if (isRecording === 'false' || !isRecording) { %>
 <!-- # <button class="btn btn-medium record_buttons <%= isRecording === 'false' || !isRecording ? 'btn-success' : 'btn-danger' %>"><i class="icon-white icon-thumbs-down"></i> Record</button> -->
 	<button class="btn btn-inverse btn-medium record_buttons" id="recordYo"></i>Start Recording</button>
