--- a/public/tpl/VideoListItemView.html
+++ b/public/tpl/VideoListItemView.html
@@ -1,9 +1,11 @@
+<div id = "on_stuff">
 <% if (isOn === 'false' || !isOn) { %>
 	<button class="btn btn-mini btn-medium" id="power"></i>Turn On</button>
  <% } else { %>
 	<button class="btn btn-mini btn-success" id="power"></i>On</button>
 <% } %>
-<a href="#videos/<%= _id %>">word</a>
+  <a href="#videos/<%= _id %>">&nbsp;&nbsp;edit video details</a>
+</div>
 <br/>
 
 <!-- <a href="#videos/<%= _id %>" class="thumbnail plain" style="text-align: center;">
@@ -18,13 +20,16 @@
       data-setup="{"controls": true, "autoplay": false, "preload": "auto"}">
 <!--     <source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4' />
     <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm' /> -->
-    <source src="http://10.5.5.9:8080/live/amba.m3u8" type='application/vnd.apple.mpegurl'/>
+    <source src="http://"+<%= piip %>+"8080/index.m3u8" type='application/vnd.apple.mpegurl'/>
 </video>
 
-<% if (isRecording === 'false' || !isRecording) { %>
-<!-- # <button class="btn btn-medium record_buttons <%= isRecording === 'false' || !isRecording ? 'btn-success' : 'btn-danger' %>"><i class="icon-white icon-thumbs-down"></i> Record</button> -->
-	<button class="btn btn-inverse btn-medium record_buttons" id="recordYo"></i>Start Recording</button>
- <% } else { %>
-	<button class="btn btn-danger btn-medium record_buttons" id="recordYo"><i class="icon-white icon-thumbs-up"></i> Recording...</button>
+<div id = "button_stuff">
+  
+    <% if (isRecording === 'false' || !isRecording) { %>
+  	   <button class="btn btn-medium record_buttons btn-inverse" id="recordYo">Start Recording</button>
+    <% } else { %>
+  	   <button class="btn btn-medium record_buttons btn-danger " id="recordYo"><i class="icon-white icon-thumbs-up"></i> Recording...</button>
+  
 <% } %>
 
+</div>
