temporary fix to not hide edit video details link

--- a/public/tpl/VideoListItemView.html
+++ b/public/tpl/VideoListItemView.html
@@ -3,9 +3,10 @@
 	<button class="btn btn-mini btn-medium" id="power"></i>Turn On</button>
  <% } else { %>
 	<button class="btn btn-mini btn-success" id="power"></i>On</button>
-<% } %>
-  <a href="#videos/<%= _id %>">&nbsp;&nbsp;edit video details</a>
+<% } %>  
 </div>
+<br/>
+<a href="#videos/<%= _id %>">edit video details</a>
 <br/>
 
 <!-- <a href="#videos/<%= _id %>" class="thumbnail plain" style="text-align: center;">
