--- a/public/tpl/VideoListItemView.html
+++ b/public/tpl/VideoListItemView.html
@@ -16,7 +16,7 @@
     <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm' /> -->
     <source src="http://<%=piip %>:8080/index.m3u8" type='application/vnd.apple.mpegurl'/>
 </video>
-<div id = "button_stuff <%= alphabetLetter %>">
+<div id = "button_stuff">
   <% if (isOn === 'true') { %>
     <% if (isRecording === 'false' || !isRecording) { %>
     <!-- # <button class="btn btn-medium record_buttons <%= isRecording === 'false' || !isRecording ? 'btn-success' : 'btn-danger' %>"><i class="icon-white icon-thumbs-down"></i> Record</button> -->
