--- a/public/tpl/VideoListItemView.html
+++ b/public/tpl/VideoListItemView.html
@@ -1,9 +1,10 @@
 <div id = "on_stuff">
-<% if (isOn === 'false' || !isOn) { %>
-	<button class="btn btn-mini btn-medium" id="power"></i>Turn On</button>
- <% } else { %>
-	<button class="btn btn-mini btn-success" id="power"></i>On</button>
-<% } %>
+    <% if (isOn === 'false' || !isOn) { %>
+        <button class="btn btn-mini btn-medium" id="power"></i>Turn On</button>
+     <% } else { %>
+        <button class="btn btn-mini btn-success" id="power"></i>On</button>
+    <% } %>
+    <span class="memoryLeft">Memory left: <%= Math.round(memoryLeft / 10000000) / 100 %> GB</span>
 </div>
 <span class="the_letter"><%= alphabetLetter %></span>
 <a class="edit_details" href="#videos/<%= _id %>"><%= name %> details</a>
@@ -17,8 +18,8 @@
     <source src="http://<%=piip %>:8080/index.m3u8" type='application/vnd.apple.mpegurl'/>
 </video>
 <div id = "button_stuff">
-  <% if (isOn === 'true') { %>
-    <% if (isRecording === 'false' || !isRecording) { %>
+  <% if (isOn) { %>
+    <% if (!isRecording) { %>
     <!-- # <button class="btn btn-medium record_buttons <%= isRecording === 'false' || !isRecording ? 'btn-success' : 'btn-danger' %>"><i class="icon-white icon-thumbs-down"></i> Record</button> -->
     <button class="btn btn-medium record_buttons btn-inverse" id="recordYo">Start Recording</button>
    <% } else { %>
