comments out a couple of items in add video view

--- a/public/tpl/VideoView.html
+++ b/public/tpl/VideoView.html
@@ -23,7 +23,7 @@
                         </a>                    
                     </div> -->
 
-                   <div class="control-group">
+<!--                    <div class="control-group">
                         <label for="isON" class="control-label">Power On?</label>
 
                         <div class="controls">
@@ -39,7 +39,7 @@
                             <input type="checkbox" id="isRecording" name="isRecording" value="<%= isRecording === 'false' || !isRecording ? 'true' : 'false' %>" <%= isRecording === 'false' || !isRecording ? '' : 'checked' %> />
                             <span class="help-inline"></span>
                         </div>
-                    </div>
+                    </div> -->
 
 <!--                     <div class="control-group">
                         <label for="videoId" class="control-label">Id</label>
